# datascience_lab01_homework

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  inference.py  pyproject.toml  training.py
app/: main.py
app/schemas/: PredictionRequest.py  PredictionResponse.py
model/: PredictionRequest.py
src/inference/: predictor.py
src/training/: train.py
tests/: test_model.py  test_prediction.py
