[project]
name = "datascience-lab01-homework"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.41.0",
    "xenon>=0.9.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.mypy]
explicit_package_bases = true
check_untyped_defs = true
